--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/swagger": "^8.3.1",
+    "@fastify/swagger-ui": "^1.3.0",
     "bcryptjs": "^2.4.3",
+    "cookies": "^0.8.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
     "jsonwebtoken": "^9.0.0",
